--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@ body {
     background: rgb(0, 255, 255);
 }
 header {
-    border: solid 2px white;
+    border: solid 2px white;rgb(116, 0, 255);
 }
