--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,24 @@
 body {
-    color: rgb(0, 0, 0);
-    background: rgb(0, 255, 255);
-     margin: 0px;
+    color: white;
+    background: black;
+    margin: 0px;
 }
+
 header {
-    border-bottom: solid 2px white;rgb(116, 0, 255);
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color: rgb(0, 93, 0);
+    color: rgb(42, 122, 228);
+}
+
+section {
+    background: rgb(184,156,213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
 }
