--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,48 @@
 body {
+    color: white;
+    background: black;
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
+}
+
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+
+.chamada {
+    background: rgb(184, 156, 213);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;body {
 body {
     color: white;
     background: black;
@@ -47,6 +91,9 @@ p {
 }
 
 .categoria-videos img {
+}
+
+.categoria-videos img {
     opacity: 0.5;
     height: 200px;
 }
@@ -57,5 +104,5 @@ p {
 }
 
 .categoria h2 {
-    color: rgb(199, 199, 196);
+    color: rgb(42, 122, 228);
 }
