--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 body {
-    color: white;
-    background: black;
+    color: rgb(0, 0, O);
+    background: rgb(0, 255, 0);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(120, 120, 120);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(255, 0, 0);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(184, 156, 150);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -44,7 +44,7 @@ p {
     padding-right: 20px;
     margin-top: 50px;body {
 body {
-    color: white;
+    color: rgb(0, 59, 0);
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
@@ -59,7 +59,7 @@ header {
 }
 
 .chamada {
-    background: rgb(255, 165, 0);
+    background: rgb(285, 165, 100);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
